eighth commit by branch

--- a/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/app.component.html
+++ b/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/app.component.html
@@ -31,7 +31,7 @@
       </mat-menu>
     </mat-toolbar>
     <div style="background-color: black;color:white;font-size:12px;height:30px;"
-      class="pl-5 d-flex justify-content-center align-items-center">Free shipping when your order is above €99.99 | 2
+      class="pl-5 d-none justify-content-center align-items-center">Free shipping when your order is above €99.99 | 2
       Year Limited Warranty. </div>
     <div class="categories  text-center" [ngStyle]="{'display':isHidden?'none':'flex'}">
       <div class="col-md-3">
@@ -52,7 +52,8 @@
       </div>
     </div>
   </nav>
-  <app-home></app-home>
+  <!-- <app-home></app-home> -->
+  <app-dashboard></app-dashboard>
 
 
 </div>
