--- a/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/dashboard/product-management/product-management.component.css
+++ b/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/dashboard/product-management/product-management.component.css
@@ -1,9 +1,9 @@
-  table {
+table {
     width: 100%;
   }
 
   .products-table{
-    margin:0 2% 0 5%;
+    margin:5% 2% 0 5%;
   }
   
   .mat-form-field {
