--- a/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/dashboard/product-orders/product-orders.component.css
+++ b/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/dashboard/product-orders/product-orders.component.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Aclonica&family=El+Messiri:wght@500&family=Srisakdi:wght@700&display=swap');
 
 .order-details-page{
-  margin:0 2% 0 5%;
+  margin:5% 2% 0 5%;
 }
 
 table {
