--- a/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/home/home.component.css
+++ b/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/home/home.component.css
@@ -43,8 +43,7 @@
  align-self: center;
  }
 
-/* in parent 
-display:table;
-in child 
-display:table-cell;
-vertical-align:middle */
+ .card a:hover{
+    color: rgb(255, 196, 0);
+ }
+
