--- a/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/styles.css
+++ b/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/styles.css
@@ -2,3 +2,12 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.backdropBackground {
+    background-color: #000000;
+    opacity: 0.9 !important;
+  }
+
+  .custom-dialog-container{
+      
+    padding: 0;
+  }
