--- a/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/dashboard/dashboard.component.html
+++ b/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
+<!-- main dashboard with side nav where admin can perform all the operations -->
 <div class="example-container">
   <mat-sidenav-container class="example-sidenav-container">
     <mat-sidenav id="sidenav" #snav mode="over" (mouseenter)="snav.toggle()" (mouseleave)="snav.toggle()">
