--- a/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/dashboard/growth-report/growth-report.component.css
+++ b/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/dashboard/growth-report/growth-report.component.css
@@ -38,3 +38,36 @@ table {
  /*change color of underline when focused*/
  background-color:black !important;;
 }
+
+.show-label {
+  text-align: center;
+  font-size: 50px;
+  margin-top:-20px;
+  margin-bottom:30px;
+}
+
+.badge{
+  /* border: 4px solid rgb(95, 0, 173); */
+  color:rgb(95, 0, 173);
+  text-decoration: underline;
+  font-family:'Aclonica', sans-serif;
+}
+
+.symbol1{
+
+  height: 20px;
+  width: 20px;
+  background-color: red;
+}
+.symbol2{
+
+  height: 20px;
+  width: 20px;
+  background-color: blue;
+}
+.symbol3{
+
+  height: 20px;
+  width: 20px;
+  background-color: rgb(70, 190, 0);
+}
