--- a/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/dashboard/product-management/product-management.component.css
+++ b/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/dashboard/product-management/product-management.component.css
@@ -46,3 +46,17 @@ table {
   background-color: rgb(243, 189, 11); 
   outline: none;
 }
+
+
+.show-label {
+  text-align: center;
+  font-size: 50px;
+  margin-top:-20px;
+  margin-bottom:30px;
+}
+
+.badge{
+  color:rgb(95, 0, 173);
+  font-family:'Aclonica', sans-serif;
+  text-decoration: underline;
+}
