--- a/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/payment-gateway/payment-gateway.component.html
+++ b/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/payment-gateway/payment-gateway.component.html
@@ -19,7 +19,7 @@
             </div>
 
             <div class=" text-center mt-2">
-                <h1 class="text-success">Pay Rs{{payAmount}}</h1>
+                <h1 class="text-success">Pay ₹{{payAmount}}</h1>
                 <h3>Transaction Id : XXXXXXXXXX</h3>
             </div>
             <form class="paymentForm text-center" [formGroup]="">
