--- a/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/product/product.component.html
+++ b/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/product/product.component.html
@@ -17,7 +17,7 @@
         <p><b>Quantity: </b> Hurry Up!! Only {{product['productQuantity']}} items are <span
                 style="color: red;">LEFT.</span>
         </p>
-        <h2 style="color: rgb(243, 189, 11);">{{product['productPrice']}} Rs.</h2>
+        <h2 style="color: rgb(243, 189, 11);">{{product['productPrice']}} ₹</h2>
         <p>Qty:</p>
         <div style="margin-top: -15px;margin-left: -37px;">
             <button mat-icon-button [disableRipple]="true" (click)="minus()">
