--- a/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/user-management/login/login.component.html
+++ b/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/user-management/login/login.component.html
@@ -1,4 +1,4 @@
- <body align="center">
+ <body align="center" style="position: absolute; z-index:5;left:35%;">
     <h3 align="center">Log In</h3>
     <div align="center">
    <form #userForm="ngForm" (ngSubmit)='onSubmit(userForm.value)'>
