--- a/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/user-management/user-management.component.html
+++ b/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/user-management/user-management.component.html
@@ -1,4 +1,6 @@
-<div class="container-fluid bg-primary">
+
+<div>
+  <div class="container-fluid bg-primary">
     <a class="navbar-brand" href="#"></a>
     <div class="float-center">
       <h1>User Management system</h1>
@@ -7,6 +9,8 @@
   &nbsp; &nbsp;&nbsp; &nbsp;
 
   <router-outlet></router-outlet>
+</div>
+
     
 
 
