--- a/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/app.component.css
+++ b/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/app.component.css
@@ -1,3 +1,4 @@
+
 .example-spacer {
     flex: 1 1 auto;
   }
@@ -7,6 +8,21 @@
     margin: 10px;
     text-decoration: none;
     
+  }
+
+  .validation{
+    border:2px solid rgb(255, 196, 0);
+    color:rgb(255, 196, 0);
+  }
+
+  .validation:hover{
+    background-color:rgb(255, 196, 0);
+    color:black;
+  }
+
+
+  .menu-items:hover{
+    color: rgb(212, 141, 10);
   }
 
   mat-toolbar{
@@ -43,17 +59,21 @@
     font-size: 20px;
     padding-left: 150px;
     padding-top: 5px;
+    color: black;
   
   }
 
   .search-bar input{
     position: relative;
     padding-left: 20px;
+    border: 1px solid  rgb(236, 154, 0);
+    background-color: rgb(255, 209, 123);
+   
+  
   }
   .search-bar a{
     position: absolute;
     top:-12px;
     left:320px;
     z-index: 2;
-    color: black;
   }
