--- a/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/dashboard/product-management/product-management.component.html
+++ b/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/dashboard/product-management/product-management.component.html
@@ -1,11 +1,15 @@
+<!-- admin uses this page to perform CRUD over products -->
 <div class="products-table">
+
+
+  <div class="show-label"><span class="badge badge-pill">ALL THE PRODUCTS</span></div>
   <mat-form-field>
     <mat-label style="color: black;">Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Watch" #input>
   </mat-form-field>
 
 
-  <button class="create-button" mat-raised-button (click)="onCreate(-1)">
+  <button class="create-button" mat-raised-button (click)="onCreate(null)">
     <mat-icon>add_circle</mat-icon>Create
   </button>
 
@@ -61,11 +65,11 @@
 
       <ng-container matColumnDef="actions">
         <th class="pl-3" mat-header-cell *matHeaderCellDef mat-sort-header> ACTIONS </th>
-        <td mat-cell *matCellDef="let row;let i =index">
-          <button mat-icon-button (click)="onCreate(i)">
+        <td mat-cell *matCellDef="let row">
+          <button mat-icon-button (click)="onCreate(row)">
             <mat-icon>launch</mat-icon>
           </button>
-          <button mat-icon-button color="warn" (click)="deleteProduct(i)">
+          <button mat-icon-button color="warn" (click)="deleteProduct(row)">
             <mat-icon>delete_outline</mat-icon>
           </button>
         </td>
@@ -74,14 +78,12 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-
-      <!-- if you want to add spnner here -->
-
-      <!-- <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" colspan="4">Data is loading !!"</td>
-      </tr> -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">
+          <mat-spinner diameter=40 style="margin-left:130%;"></mat-spinner>
+        </td>
+      </tr>
     </table>
-
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
   </div>
 
