--- a/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/dashboard/product-orders/product-orders.component.css
+++ b/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/dashboard/product-orders/product-orders.component.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Aclonica&family=El+Messiri:wght@500&family=Srisakdi:wght@700&display=swap');
-
 .order-details-page{
   margin:5% 2% 0 5%;
 }
@@ -111,4 +109,17 @@ background-color:black !important;
   font-size: 25px;
   margin-top:17px;
   font-family: 'Aclonica', sans-serif;
+}
+
+.show-label {
+  text-align: center;
+  font-size: 50px;
+  margin-top:-20px;
+  margin-bottom:30px;
+}
+
+.badge{
+  color:rgb(95, 0, 173);
+  font-family:'Aclonica', sans-serif;
+  text-decoration: underline;
 }
