--- a/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/dashboard/sales-report/sales-report.component.html
+++ b/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/dashboard/sales-report/sales-report.component.html
@@ -1,4 +1,6 @@
+<!-- this page shows sales report and revenue made by every product -->
 <div class="sales-report-table">
+  <div class="show-label"><span class="badge badge-pill">SALES REPORT</span></div>
   <mat-form-field>
     <mat-label style="color: black;">Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Watch" #input>
@@ -10,31 +12,43 @@
       <ng-container matColumnDef="salesReportId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> SALES REPORT ID </th>
         <td mat-cell *matCellDef="let row"> {{row.salesReportId}} </td>
+        <td mat-footer-cell *matFooterCellDef></td>
       </ng-container>
 
       <ng-container matColumnDef="productId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> PRODUCT ID </th>
         <td mat-cell *matCellDef="let row"> {{row.productId}} </td>
+        <td mat-footer-cell *matFooterCellDef></td>
       </ng-container>
 
       <ng-container matColumnDef="productName">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> PRODUCT NAME </th>
         <td mat-cell *matCellDef="let row"> {{row.productName}} </td>
+        <td mat-footer-cell *matFooterCellDef></td>
       </ng-container>
 
       <ng-container matColumnDef="quantitySold">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> QUANTITY SOLD </th>
         <td mat-cell *matCellDef="let row"> {{row.quantitySold}} </td>
+        <td mat-footer-cell *matFooterCellDef> TOTAL REVENUE</td>
       </ng-container>
 
       <ng-container matColumnDef="totalSale">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> TOTAL SALE </th>
         <td mat-cell *matCellDef="let row"> {{row.totalSale}} </td>
+        <td mat-footer-cell *matFooterCellDef> {{getTotalRevenue()}} ₹ </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">
+          <mat-spinner diameter=40 style="margin-left:60%;"></mat-spinner>
+        </td>
+      </tr>
+      <tr style="background-color:  rgb(255, 186, 59);" mat-footer-row
+        *matFooterRowDef="displayedColumns; sticky: true"></tr>
     </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+    <mat-paginator style="background-color: rgb(255, 186, 59);" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
   </div>
 </div>
