--- a/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/home/home.component.css
+++ b/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/app/components/home/home.component.css
@@ -26,7 +26,8 @@
 }
 
 .category-section .card{
-   height: 440px;
+   height: 420px;
+   width: 290px;
    background-color: rgba(0, 0, 0, 0.7);
    border: 2px solid black;
    box-shadow: 5px 5px 10px 2px rgb(0, 0, 0);
@@ -49,6 +50,10 @@
  }
 
 .no-items {
+   width: 1200px !important;
+}
+
+.no-items img{
    width: 100% !important;
    height: 100% !important;
 }
