--- a/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/styles.css
+++ b/Great Outdoor/Great Outdoor Front End/Great Outdoor UI/project/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-
+@import url('https://fonts.googleapis.com/css2?family=Aclonica&family=El+Messiri:wght@500&family=Srisakdi:wght@700&display=swap');
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
